--- a/css/styles.css
+++ b/css/styles.css
@@ -29,4 +29,16 @@ body {
   .small-select {
     height: 35px !important;
   }
+
+.center {
+    font-size: 25px;
+    width: 500px;
+    height: 100px;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
  
